Fix scrollbars

--- a/src/common/Square/square.scss
+++ b/src/common/Square/square.scss
@@ -21,7 +21,7 @@
   max-width: 100%;
   min-width: 100%;
 
-  overflow: scroll;
+  overflow: auto;
 
   &_clickable {
     cursor: pointer;
